[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "A collection of tools for python."
authors = ["Sengolda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
